--- a/Areas/Admin/Views/PagesClients/AddNewClient.cshtml
+++ b/Areas/Admin/Views/PagesClients/AddNewClient.cshtml
@@ -98,7 +98,7 @@
 }
 
 <div>
-    @Html.ActionLink("<=", "GetAllClients", "", new { @class = "btn btn-primary" })
+    @Html.ActionLink("<=", "Index", "", new { @class = "btn btn-primary" })
 </div>
 
 @section Scripts
