--- a/Areas/Admin/Views/PagesClients/EditClient.cshtml
+++ b/Areas/Admin/Views/PagesClients/EditClient.cshtml
@@ -119,9 +119,9 @@
     </div>
 
 </div>
-    @*<div>
+    <div>
         @Html.ActionLink("Cкачать ранее созданную заявку ", "DownloadResultDocument", "", new { @class = "btn btn-primary" })
-    </div>*@
+    </div>
 }
 
 <div>
