--- a/Areas/Admin/Views/PagesClients/EditClient.cshtml
+++ b/Areas/Admin/Views/PagesClients/EditClient.cshtml
@@ -120,7 +120,7 @@
 
 </div>
     <div>
-        @Html.ActionLink("Cкачать ранее созданную заявку ", "DownloadResultDocument", "", new { @class = "btn btn-primary" })
+        @*@Html.ActionLink("Cкачать ранее созданную заявку ", "DownloadResultDocument", "", new { @class = "btn btn-primary" })*@
     </div>
 }
 
@@ -132,7 +132,7 @@
 
 @section Scripts {
     @*@Scripts.Render("~/bundles/jquery")*@
-    @*< script defer src = "~/Content/MyJS/AddClient.js" ></ script >*@
+    < script defer src = "~/Content/MyJS/AddClient.js" ></ script >
    
     <script type="text/javascript">
 
