--- a/Areas/Admin/Views/PagesClients/AddNewClient.cshtml
+++ b/Areas/Admin/Views/PagesClients/AddNewClient.cshtml
@@ -78,15 +78,17 @@
 
     <div class="form-group">
         <label class="custom-control col-md-2">Изображение</label>
+        <img id="imgpreview" src="~/Content/img/no_image.png" />"
         <div class="col-md-10">
             <input type="file" , name="file" id="imageUpload" />
-            <img id="imgpreview" src="~/Content/img/no_image.png" />"
+            @*<img id="imgpreview" src="~/Content/img/no_image.png" />"*@
         </div>
+
         @*@Html.LabelFor(model => model.Image, htmlAttributes: new { @class = "control-label col-md-2" })*@
         @*<div class="col-md-10">
-                @Html.EditorFor(model => model.Image, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Image, "", new { @class = "text-danger" })
-            </div>*@
+            @Html.EditorFor(model => model.Image, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Image, "", new { @class = "text-danger" })
+        </div>*@
     </div>
 
     <div class="form-group">
