--- a/Areas/Admin/Views/PagesClients/EditClient.cshtml
+++ b/Areas/Admin/Views/PagesClients/EditClient.cshtml
@@ -112,11 +112,11 @@
             @*@Html.ActionLink("Печать ", "PrintDocPdf", "", new { @class = "btn btn-primary"})*@
         </div>
     </div>
-    <div>
+    @*<div>
         <form name="search">
             <input type="button" id="myButton" name="print" value="Печать" class="btn btn-primary printBlock" />
         </form>
-    </div>
+    </div>*@
 
 </div>
     <div>
